test/Fail/ConvErrCtxPi2.err
ConvErrCtxPi2.agda:23.15-16: error: [UnequalTerms]
The terms
  foo {a = Structure {T1 → X} A}
and
  foo {a = Structure {T1 → Y} B}
are not equal at type Set
when checking that the expression b has type foo
